# Security_Monitor_Based_on_Computer_Vision

./: .gitignore  CMakeLists.txt  evaluation.py  prepare_dataset.py  readme.md  real_time_detector.cpp  requirements.txt  telegram_pose_bot.py  test_api.py  train_hog_fast.cpp  train_hog_svm.cpp
templates/: index.html
